[package]
name = "site-scraper"
version = "0.2.0"
authors = ["Newton Toto <nyachiengatoto@gmail.com>"]
description = "A simple Web Scraping service, developed and deployed on a Cloudfare Worker"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
worker = "0.0.24"
console_error_panic_hook = "0.1.7"
scraper = "0.19.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
regex-lite = "0.1.5"

# Manually included to force a union with the getrandom used by scrapper (allowing it to work in wasm)
getrandom = { version = "*", features = ["js"] }
futures = { version = "0.3.30", default-features = false, features = [
	"async-await",
	"std",
] }
url = "2.5.0"
itertools = "0.12.1"

[profile.release]
opt-level = 3
